Major changes in the way we provide hierarchies (wip)